# usd_schema_bootstrap

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  __init__.py  module.cpp  moduleDeps.cpp  plugInfo.json  schema.usda
